--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11254,6 +11254,7 @@ i.icofont-phone {
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   transition: transform 0.3s, background-color 0.3s, color 0.3s;
+  height: 100%;
 }
 .service-card:hover {
   transform: translateY(-10px);
@@ -11264,6 +11265,9 @@ i.icofont-phone {
 .service-card .card-text {
   color: #333; 
   transition: color 0.3s;
+  text-align: start;
+}
+.service-card .card-text{
   text-align: justify;
 }
 .service-card:hover .icon,
