--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1257,6 +1257,7 @@ button.default__button {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: 50px;
 }
 
 .single__transform {
