--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11385,3 +11385,28 @@ height: 24px;
         margin-top: 15px;
         font-size: 0.9rem;
     }
+    .list-unstyled-2 {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    /* ............................ */
+
+    h2.mt-3.mt-md-0 {
+      font-weight: 700;
+  }
+
+  p.mt-2 {
+ 
+  color: var(--whiteColor);
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px;
+  max-width: 84%;
+}
+.image-icon svg {
+  width: 100px;
+  height: auto;
+}
