--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8864,14 +8864,47 @@ p.mt-2 {
   color: #fff; 
 }
 /* ====service card=== */
-.service-page .card {
+.card {
   border: none !important;
   cursor: pointer;
 }
-.card:hover {
+/* .card:hover {
    transform: scale(1.05);
-}
+} */
 .request-quote__area-input-field {
   width: 49%;
 }
+.service-page .col-md-6 .col-md-4 img {
+  width: 192px;
+  height: 224px;
+}
+.card-hover {
+  overflow: hidden; 
+}
+.card-body {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+}
+.card-body .card-title {
+  margin-bottom: 0px;
+}
+.card:hover {
+  transform: scale(1.1); 
+  transition: transform 0.3s ease-in-out; 
+}
+
+.img-fluid {
+  transition: transform 0.3s ease-in-out;
+}
+.dark-mode-card {
+  color: #000;
+  background-color: #fff; 
+}
+
+
+
+
 
