--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8900,8 +8900,13 @@ p.mt-2 {
   transition: transform 0.3s ease-in-out;
 }
 .dark-mode-card {
-  color: #000;
-  background-color: #fff; 
+  color: #212529;
+}
+.card {
+box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.card-text {
+  font-size: 17px;
 }
 
 
