--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8868,14 +8868,11 @@ p.mt-2 {
   border: none !important;
   cursor: pointer;
 }
-/* .card:hover {
-   transform: scale(1.05);
-} */
 .request-quote__area-input-field {
   width: 49%;
 }
 .service-page .col-md-6 .col-md-4 img {
-  width: 192px;
+  width: 100%;
   height: 224px;
 }
 .card-hover {
@@ -8886,6 +8883,7 @@ p.mt-2 {
   align-items: flex-start;
   flex-direction: column;
   height: 100%;
+  gap: 10px;
   justify-content: space-around;
 }
 .card-body .card-title {
@@ -8907,10 +8905,26 @@ p.mt-2 {
 }
 .card-text {
   font-size: 17px;
+  font-weight: 500;
+  color: #5f6c76;
 }
 .horizontal-card .card img {
-  height: 248px;
-  width: 224px;
+  height: 224px;
+  width: 100%;
+}
+.horizontal-card {
+  padding: 50px 0px;
+}
+.horizontal-card .col-md-6 .card-text {
+  font-size: 17px;
+  font-weight: 500;
+  color: #5f6c76;
+}
+.horizontal-card .col-md-6 .col-md-8 {
+  padding-left: 0px;
+}
+.horizontal-card {
+  justify-content: center;
 }
 
 
