--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8873,6 +8873,9 @@ p.mt-2 {
 .request-quote__area-input-field {
   width: 49%;
 }
+.service-page .container .col-md-6 .col-md-4 {
+  padding-right: 0px;
+}
 .service-page .col-md-6 .col-md-4 img {
   width: 100%;
   height: 224px;
