--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8876,6 +8876,9 @@ p.mt-2 {
 .service-page .container .col-md-6 .col-md-4 {
   padding-right: 0px;
 }
+.horizontal-card .col-md-6 .col-md-4 {
+  padding-right: 0px;
+}
 .service-page .col-md-6 .col-md-4 img {
   width: 100%;
   height: 224px;
@@ -8914,7 +8917,7 @@ p.mt-2 {
   color: #5f6c76;
 }
 .horizontal-card .card img {
-  height: 224px;
+  height: 227px;
   width: 100%;
 }
 .horizontal-card {
