--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8684,34 +8684,40 @@ i.icofont-phone {
 .header__animate__item a {
   color: #fff;
 }
-
-/* bac top top */
+/* ============= */
+.back-to-top svg {
+  width: 24px;
+  height: 24px;
+}
 .back-to-top {
+  display: none; 
   position: fixed;
-  bottom: 30px;
-  right: 30px;
-  display: none;
-  width: 50px;
-  height: 50px;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
   background-color: #fe0094;
+  color: #fff;
+  border: none;
+  padding: 10px;
   border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  text-decoration: none;
-  transition: opacity 0.3s ease, transform 0.3s ease;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .back-to-top:hover {
   box-shadow: var(--darkShadow);
-  background-color: #0c0e2b;
-  transform: scale(1.1);
+  background-color: #0c0e2b; 
 }
 
 .back-to-top svg {
   width: 24px;
   height: 24px;
+}
+.back-to-top.show {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /* ..... web card.. */
