--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8919,9 +8919,6 @@ p.mt-2 {
   transform: scale(1.1); 
   filter: brightness(1.1);
 }
-
-
-
 .dark-mode-card {
   color: #212529;
 }
@@ -8951,6 +8948,13 @@ p.mt-2 {
 .horizontal-card {
   justify-content: center;
 }
+/* bgimage */
+.breadcrumbarea {
+  background: url(../img/about/about__bg__1.jpg) no-repeat center center fixed;
+  position: relative;
+}
+
+
 
 
 
