--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6022,7 +6022,7 @@ img.herobanner__vector.hero__icon__3 {
 }
 
 .breadcrumbarea {
-  padding: 120px 0;
+  padding: 20px 0;
   background-position: center center !important;
 }
 
@@ -8960,9 +8960,60 @@ p.mt-2 {
 }
 /* bgimage */
 .breadcrumbarea {
-  background: url(../img/about/about__bg__1.jpg) no-repeat center center fixed;
+  /* background: url(../img/about/about__bg__1.jpg) no-repeat center center fixed; */
   position: relative;
 }
+.breadcrumbarea__content__wraper {
+  position: absolute;
+  top: 100px;
+}
+/* video */
+.breadcrumbarea {
+  position: relative;
+  height: 100vh; 
+  width: 100%;  
+}
+.breadcrumbarea__video__element {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  z-index: -1;
+}
+/* Content on top of the video */
+.breadcrumbarea__content__wraper {
+  position: relative;
+  z-index: 1; 
+  color: #fff; 
+  padding-top: 20px;
+  text-align: start;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 20px;
+}
+.breadcrumbarea__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4); 
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
