--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1190,10 +1190,10 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 575px) {
+@media (max-width: 575px) {
   .herobanner__title h1 {
-    font-size: 26px;
-    line-height: 36px;
+    font-size: 26px !important;
+    line-height: 36px !important;
   }
 }
 
