--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9004,6 +9004,17 @@ p.mt-2 {
   height: 100%;
   background: rgba(0, 0, 0, 0.4); 
 }
+#brand__area .brand__single img {
+  width: 100%;
+  height: 90px;
+  max-width: 80%;
+}
+.brand-color {
+  background-color: rgba(255, 240, 250, 0.05);
+}
+.specialty-card {
+  height: 100%;
+}
 
 
 
