--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9076,9 +9076,21 @@ p.mt-2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.7);
 }
-
+.breadcrumbarea__overlay-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+.breadcrumbarea-video-small {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
 #brand__area .brand__single img {
   width: 100%;
   height: 90px;
