--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9091,8 +9091,8 @@ p.mt-2 {
 
 #brand__area .brand__single img {
   width: 100%;
-  height: 90px;
-  max-width: 80%;
+  height: auto;
+  max-width: 100%;
 }
 
 .brand-color {
