--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2779,6 +2779,7 @@ img.herobanner__vector.hero__icon__3 {
 
 .service__img img {
   max-width: 100%;
+  border-radius: 27px;
 }
 
 .service__img__bg img {
