--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ body {
   line-height: 32px;
   position: relative;
   overflow-x: hidden;
-  user-select: none;
+  /* user-select: none; */
 }
 
 p {
