mobile logo update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8769,7 +8769,7 @@ i.icofont-phone {
 
 /* home page changing css */
 .about-section {
-  padding: 0px;
+  padding: 0px 0px 20px 0px;
 }
 
 .about-section img {
@@ -8782,7 +8782,7 @@ i.icofont-phone {
 
 .service-page {
   background: var(--pinkcolor);
-  padding: 40px;
+  padding: 40px 0px;
 }
 
 .service-section img {
