--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4893,3 +4893,11 @@
     padding-left: 15px !important;
   }
 }
+@media (max-width: 425px) {
+  .project__img {
+      max-height: 200px; /* Adjust max height for smaller screens */
+  }
+  .all__project .col-xl-6.col-lg-6.col-md-6.col-sm-6.col-12 {
+    margin-bottom: 20px;
+}
+}
