--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9245,3 +9245,22 @@ p.mt-2 {
 .is_dark .light-mode {
   display: none;
 }
+
+/* from css submot  */
+.checkmark-container {
+  display: inline-block;
+  padding: 10px;
+  border: 2px solid #4CAF50; 
+  border-radius: 50%;  
+  width: fit-content;
+  background-color: white;
+}
+
+.checkmark-container svg {
+  width: 50px;
+  height: 50px;
+  stroke: #4CAF50; 
+  stroke-width: 4;
+  fill: none;  
+}
+
