--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9109,6 +9109,7 @@ p.mt-2 {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
+  border-radius: 20px;
 }
 
 .breadcrumbarea-video-small {
