--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9284,4 +9284,13 @@ p.mt-2 {
   stroke-width: 4;
   fill: none;  
 }
+.contact-bg-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+}
 
