--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1322,6 +1322,7 @@ img.herobanner__vector.hero__icon__3 {
 .herobanner__img.herobanner__img--position img {
   height: 80%;
   top: 81px;
+  animation: dot-anim-2 3s linear 0s infinite alternate;
 }
 
 .headerarea--1 .headerarea__main__wrapper {
