--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1261,7 +1261,7 @@
   }
 }
 
-/* @media (min-width: 1366px) and (max-width: 1499px) {
+@media (min-width: 1366px) and (max-width: 1499px) {
   .herobanner__img--position img {
     max-width: 600px;
     bottom: auto;
@@ -1276,7 +1276,7 @@
     top: 0;
     right: 50px;
   }
-} */
+}
 
 @media (min-width: 768px) and (max-width: 991px) {
   .herobanner__img--position img {
