--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8876,7 +8876,7 @@ p.mt-2 {
   font-weight: 500;
   line-height: 35px;
   max-width: 100%;
-  text-align: justify;
+  text-align: start;
 }
 
 .image-icon svg {
