--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    font-family: Poppins;
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: normal;
     overflow-x: hidden;
