--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9298,7 +9298,7 @@ p.mt-2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
   border-radius: 20px;
 }
 
