--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4518,9 +4518,12 @@ img.herobanner__vector.hero__icon__3 {
 .project__section__img.text__end {
   text-align: end;
 }
-
-
-
+.all__project .row .col-xl-6.col-lg-6.col-md-6.col-sm-6.col-12 {
+  margin-bottom: 20px;
+}
+.all__project .row .col-xl-3.col-lg-3.col-md-4.col-sm-12.col-12 {
+  margin-bottom: 20px;
+}
 .project__content {
   display: flex;
   justify-content: space-between;
