--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1174,6 +1174,9 @@
     font-size: 40px;
     line-height: 55px;
   }
+  .is_dark .herobanner__title h1 {
+    font-size: 40px;
+}
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
