--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -38,6 +38,67 @@ a {
     overflow-y: hidden !important;
 }
 
+/* about */
+.about-content {
+    padding: 100px 0px;
+}
+
+.about-image img {
+    width: 100%;
+    border-radius: 20px;
+}
+.about-image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 20px; 
+}
+.about-image {
+    position: relative;
+    display: inline-block;
+}
+/*  */
+.icon-box-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+}
+
+.icon-design {
+    border-radius: 100%;
+    padding: 10px;
+    display: flex;
+    background: #222;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-box-content {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    color: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.icon-box-content i {
+    font-size: 24px;
+    color: #ffcc00;
+}
+
+.box-title {
+    margin-bottom: 0px;
+}
 
 /* footer */
 .footer {
@@ -50,69 +111,11 @@ a {
     text-align: center;
     padding: 10px 0px;
 }
-
-/* service */
-.service-card-section {
-    padding: 100px 0px 0px 0px;
-    position: relative;
-}
-
-.service-card {
-    background: #ffffff;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
-    border-radius: 20px;
-    padding: 30px;
-    text-align: start;
-    position: relative;
-    overflow: hidden;
-    transition: transform 0.3s ease-in-out;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-
-.service-card p {
-    color: #7d7d7d;
-}
-
-.service-card:hover {
-    transform: translateY(-5px);
-}
-
-.service-card svg {
-    width: 50px;
-    height: 50px;
-    fill: #FFF;
-}
-
-.service-card .project__heading h3 {
-    margin-bottom: 0px;
-    color: #7d7d7d;
-}
-
-.service-card h4 {
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-}
-
-.hover-line {
-    position: absolute;
-    bottom: 0;
-    left: -100%;
-    width: 100%;
-    height: 3px;
-    background: linear-gradient(90deg, #00d9ff, #ff00d4);
-    transition: all 0.5s ease-in-out;
-}
-
-.service-card:hover .hover-line {
-    left: 0;
-}
-
 /* contact */
 .contact-from {
     padding: 80px 0px;
 }
+
 .section-title h4 {
     font-size: 25px;
     font-weight: 700;
@@ -120,6 +123,7 @@ a {
     justify-content: center;
     align-items: center;
 }
+
 .section-title {
     margin-bottom: 60px;
 }
