--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -25,19 +25,33 @@ a {
     text-decoration: none;
     transition: var(--transition);
 }
+
 .header__animate__container {
     overflow: hidden;
     white-space: nowrap;
     width: 100%;
     position: relative;
-  }
-  
-  .header__animate__wraper {
+}
+
+.header__animate__wraper {
     display: flex;
     width: max-content;
-    will-change: transform; /* Optimized for smooth scrolling */
-  }
-  
+    will-change: transform;
+    /* Optimized for smooth scrolling */
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 /*  */
 .copyright__left {
     display: flex;
@@ -59,6 +73,7 @@ a {
     width: 100%;
     border-radius: 20px;
 }
+
 .about-image::before {
     content: "";
     position: absolute;
@@ -67,12 +82,14 @@ a {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.4);
-    border-radius: 20px; 
+    border-radius: 20px;
 }
+
 .about-image {
     position: relative;
     display: inline-block;
 }
+
 /*  */
 .icon-box-list {
     display: grid;
@@ -123,6 +140,7 @@ a {
     text-align: center;
     padding: 10px 0px;
 }
+
 /* contact */
 .contact-from {
     padding: 80px 0px;
