--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -26,20 +26,7 @@ a {
     transition: var(--transition);
 }
 
-.header__animate__container {
-    overflow: hidden;
-    white-space: nowrap;
-    width: 100%;
-    position: relative;
-}
-
-.header__animate__wraper {
-    display: flex;
-    width: max-content;
-    will-change: transform;
-    /* Optimized for smooth scrolling */
-}
-
+/*==== input field=== */
 /* Chrome, Safari, Edge, Opera */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
@@ -128,7 +115,19 @@ input[type="number"] {
 .box-title {
     margin-bottom: 0px;
 }
-
+.contact-us-img img {
+    width: 100%;
+    border-radius: 15px;
+    height: auto;
+}
+.parent-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    height: 100%;
+}
 /* footer */
 .footer {
     background: var(--gradientColor);
