--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1086,6 +1086,9 @@
   .offcanvas__header--menu__open {
     display: block;
   }
+  .offcanvas__menu_ul {
+    max-height: 100% !important;
+  }
 }
 
 @media only screen and (min-width: 480px) {
