--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -625,7 +625,9 @@ button.default__button {
   margin: 0;
 }
 
-
+.breadcrumbarea__content__wraper .breadcrumbarea__title h1.heading {
+  color: #fff;
+}
 
 .section__title__heading h3 span {
   color: var(--primaryColor);
