--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -6,6 +6,7 @@ p {
 
 .breadcrumbarea__inner p {
     color: #fff;
+    margin-bottom: 0px;
 }
 
 a {
@@ -238,7 +239,7 @@ input[type="number"] {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    padding: 40px 20px;
+    padding: 40px 0px;
 }
 
 .feature-box {
@@ -266,7 +267,7 @@ input[type="number"] {
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
 }
 
 .feature-icon {
