--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -5,7 +5,7 @@ p {
 }
 
 .breadcrumbarea__inner p {
-    color: #fff;
+    color: #000;
     margin-bottom: 0px;
 }
 
@@ -268,6 +268,10 @@ input[type="number"] {
     display: flex;
     justify-content: center;
     gap: 20px;
+}
+.breadcrumbarea__title h2 {
+    font-size: 30px;
+    color: #000;
 }
 
 .feature-icon {
