--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -12,12 +12,15 @@ a {
     text-decoration: none;
     transition: var(--transition);
 }
+
 .text-theme {
-  color: #000; 
+    color: #000;
 }
+
 .is_dark .text-theme {
-  color: #fff; 
+    color: #fff;
 }
+
 .is_light .feature-text {
     color: #000;
 }
@@ -123,8 +126,9 @@ input[type="number"] {
     align-items: center;
     gap: 20px;
     padding: 30px 0px;
-   
+
 }
+
 /* footer */
 .footer {
     background: var(--gradientColor);
@@ -270,12 +274,28 @@ input[type="number"] {
     color: #fff;
 }
 
+.is_light .footer p {
+    color: #000;
+}
+
+.is_dark .footer p {
+    color: #fff;
+}
+.is_light .feature-box {
+    color: #1a3d7c;
+}
+
+.is_dark .feature-box {
+    color: #fff;
+}
+
 .feature-button {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     gap: 20px;
 }
+
 .breadcrumbarea__title h2 {
     font-size: 30px;
     color: #000;
@@ -295,10 +315,10 @@ input[type="number"] {
 
 .feature-text {
     font-weight: 600;
-    color: #fff;
     font-size: 14px;
     line-height: 20px;
     text-align: center;
+    color: #1a3d7c;
 }
 
 @media (max-width: 768px) {
@@ -317,12 +337,14 @@ input[type="number"] {
         flex-direction: column;
         width: 100%;
     }
+
     .parent-contact .footer__icon {
         margin-bottom: 20px;
     }
+
     .icon-box-list {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    margin-bottom: 20px;
-}
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 20px;
+    }
 }
