--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -245,11 +245,13 @@ input[type="number"] {
 
 /* frature section css */
 .features-section {
-    justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
     padding: 40px 0px;
+}
+.contact_bg {
+  background: var(--gradientColor);
 }
 
 .feature-box {
