--- a/assets/css/Landing.css
+++ b/assets/css/Landing.css
@@ -323,7 +323,12 @@ input[type="number"] {
     text-align: center;
     color: #1a3d7c;
 }
-
+#service .col-xl-4.col-lg-4.col-md-6.col-sm-6.col-12 {
+    margin-bottom: 10px;
+}
+#service .service__single__wraper--2 {
+    height: 100%;
+}
 @media (max-width: 768px) {
     .feature-box {
         width: 45%;
